--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule "bundle/css-comb"]
+	path = bundle/css-comb
+	url = https://github.com/miripiruni/CSScomb-for-Vim.git
